Add specific 64 bit compilation options. Specify --with-recode to configure to enable.

--- a/configure.ac
+++ b/configure.ac
@@ -151,6 +151,25 @@ else
 AC_MSG_RESULT($DO_MYSQL)
 fi
 
+#  Include redcore specific flags for x64 compilation
+AC_MSG_CHECKING(whether to include redcore specific flags)
+RC_FLAGS=no
+AC_ARG_WITH(redcore,
+[
+Redcore options:
+
+  --with-redcore       Include redcore flags],
+[
+    if test "$withval" = "yes" ; then
+        CFLAGS="-m64 -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -O2 -pipe -msse3 -fno-strength-reduce -fno-delete-null-pointer-checks -fno-strict-aliasing -frename-registers -DREDCORE $CFLAGS"
+        CXXFLAGS="-m64 -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -O2 -pipe -msse3 -fno-strength-reduce -fno-delete-null-pointer-checks -fno-strict-aliasing -frename-registers -DREDCORE $CXXFLAGS"
+        RC_FLAGS=yes
+    elif test "$withval" != "no" ; then
+        AC_MSG_ERROR(Please choose yes or no)
+    fi
+])
+AC_MSG_RESULT($RC_FLAGS)
+
 ## Check for options
 #  Include debug info in library?
 AC_MSG_CHECKING(whether to include debug info in library)
